# vscode-uri-rs

./: Cargo.toml  README.md
src/: char_code.rs  index.rs  lib.rs  platform.rs  uri.rs  utils.rs
tests/: paths_test.rs  uri_tests.rs
