[package]
name = "vscode-uri-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of vscode-uri"
authors = ["kohii <kohii.tokyo@gmail.com>"]
license = "MIT"
repository = "https://github.com/kohii/vscode-uri-rs"
readme = "README.md"
keywords = ["uri", "url", "vscode"]

[dependencies]
percent-encoding = "2.3.1"
regex = "1.10.2"
lazy_static = "1.4.0"

[lib]
name = "vscode_uri_rs"
path = "src/lib.rs"
